--- a/portfolio.html
+++ b/portfolio.html
@@ -4,77 +4,89 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
     <title>Portfolio</title>
 </head>
-<body>
-<header>
+<body class="portfolio-body">
+<header class="site-header">
 
-    <a href="Web Studio">Web Studio</a>
-    <nav>
-        <ul>
-            <li><a href="Studio">Studio</a> </li>
-            <li><a href="Portfolio">Portfolio</a> </li>
-            <li><a href="Contacts">Contacts</a> </li>
+    <a href="Web Studio" class="web-studio-link link">Web <span class="link-studio">Studio</span></a>
+    <nav class="header navigation">
+        <ul class="header list">
+            <li class="header item"><a class="header-link link" href="Studio">Studio</a> </li>
+            <li class="header item"><a class="header-link link" href="Portfolio">Portfolio</a> </li>
+            <li class="header item"><a class="header-link link" href="Contacts">Contacts</a> </li>
         </ul>
     </nav>
 
-    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+    <a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+    <a class="header-tel link" href="tel:+110001111111">+11 (000) 111-11-11</a>
 
 </header>
 <main>
-   <section>
-    <button type="button">All</button>
-    <button type="button">Web Site</button>
-    <button type="button">App</button>
-    <button type="button">Design</button>
-    <button type="button">Marketing</button>
+   <section class="service-nav">
+    <button class="service-nav-btn" type="button">All</button>
+    <button class="service-nav-btn" type="button">Web Site</button>
+    <button class="service-nav-btn" type="button">App</button>
+    <button class="service-nav-btn" type="button">Design</button>
+    <button class="service-nav-btn" type="button">Marketing</button>
    </section> 
-   <section>
-    <ul>
-        <li><img src="./images/BankingApp.jpg" alt="Banking App Interface Concept">
-         <h3>Banking App Interface Concept</h3>
-         <p>App</p>
+   <section class="service">
+    <ul class="service-list list">
+        <li class="service-item">
+             <img src="./images/BankingApp.jpg" alt="Banking App Interface Concept" width="360" height="300">
+             <h3 class="service-title">Banking App Interface Concept</h3>
+             <p class="service-after-title">App</p>
         </li>
-        <li><p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
-        Cloud Storage App</p>
-         <h3>Cashless Payment</h3>
-         <p>Marketing</p>
+        <li class="service-item">
+             <img src="./images/CashlessPayment.jpg" alt="Cashless Payment" width="360" height="300">
+             <h3 class="service-title">Cashless Payment</h3>
+             <p class="service-after-title">Marketing</p>
         </li>
-        <li><img src="./images/MeditaionApp.jpg" alt="Meditaion App">
-         <h3>Meditaion App</h3>
-         <p>App</p>
+        <li class="service-item">
+             <img src="./images/MeditaionApp.jpg" alt="Meditaion App" width="360" height="300">
+             <h3 class="service-title">Meditaion App</h3>
+             <p class="service-after-title">App</p>
         </li>
-        <li><img src="./images/TaxiService.jpg" alt="Taxi Service">
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+        <li class="service-item">
+            <img src="./images/TaxiService.jpg" alt="Taxi Service" width="360" height="300">
+            <h3 class="service-title">Taxi Service</h3>
+            <p class="service-after-title">Marketing</p>
         </li>
-        <li><img src="./images/ScreenIllustrations.jpg" alt="Screen Illustrations">
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+        <li class="service-item">
+            <img src="./images/ScreenIllustrations.jpg" alt="Screen Illustrations" width="360" height="300">
+            <h3 class="service-title">Screen Illustrations</h3>
+            <p class="service-after-title">Design</p>
         </li>
-        <li><img src="./images/OnlineCourses.jpg" alt="Online Courses">
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+        <li class="service-item"><img src="./images/OnlineCourses.jpg" alt="Online Courses" width="360" height="300">
+            <h3 class="service-title">Online Courses</h3>
+            <p class="service-after-title">Marketing</p>
         </li>
-        <li><img src="./images/InstagramStories.jpg" alt="Instagram Stories Concept">
-            <h3>Instagram Stories Concept</h3>
-            <p>Design</p>
+        <li class="service-item">
+            <img src="./images/InstagramStories.jpg" alt="Instagram Stories Concept" width="360" height="300">
+            <h3 class="service-title">Instagram Stories Concept</h3>
+            <p class="service-after-title">Design</p>
         </li>
-        <li><img src="./images/OrganicFood.jpg" alt="Organic Food">
-            <h3>Organic Food</h3>
-            <p>Web Site</p>
+        <li class="service-item">
+            <img src="./images/OrganicFood.jpg" alt="Organic Food" width="360" height="300">
+            <h3 class="service-title">Organic Food</h3>
+            <p class="service-after-title">Web Site</p>
         </li>
-        <li><img src="./images/FreshCoffee.jpg" alt="Fresh Coffee">
-            <h3>Fresh Coffee</h3>
-            <p>Web Site</p>
+        <li class="service-item">
+            <img src="./images/FreshCoffee.jpg" alt="Fresh Coffee" width="360" height="300">
+            <h3 class="service-title">Fresh Coffee</h3>
+            <p class="service-after-title">Web Site</p>
         </li>
     </ul>
    </section>
 </main>
-<footer>
-    <a href="Web Studio">Web Studio</a>
-    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+<footer class="site-footer">
+    <a href="Web Studio" class="logo-studio-link link">Web <span class="studio-link">Studio</span></a>
+    <p class="footer-after-link">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 </body>
 </html>
