--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="header-navigation">
     <ul class="header-list list">
         <li class="header-item"><a class="header-link link" href="Studio">Studio</a> </li>
-        <li class="header-item"><a class="header-link link" href="http://127.0.0.1:5500/portfolio.html" target="_blank" rel="noopener norefferer nofollow">Portfolio</a> </li>
+        <li class="header-item"><a class="header-link link" href="./portfolio.html" target="_blank" rel="noopener norefferer nofollow">Portfolio</a> </li>
         <li class="header-item"><a class="header-link link" href="Contacts">Contacts</a> </li>
     </ul>
     </nav>
